2008-03-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb, lib/gluon/builder.rb: cache key. 

2008-03-11  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb, lib/gluon/builder.rb, lib/gluon/po.rb,
	lib/gluon/rs.rb: page cache.

2008-03-06  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/renderer.rb: compile view.

2008-03-01  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/plugin.rb: plugin.

2008-02-24  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/mock.rb: mock builder.

2008-02-23  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb, lib/gluon/renderer.rb: default view.

2008-02-20  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/rs.rb: session manager.

2008-02-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) negate option of cond.

	* lib/gluon/po.rb: (Gluon::PresentationObject class) import with page object.

2008-02-03  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) URI fragment.

2007-10-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) NOT operator
	notation for cond.

	* Source Code Management: cvs -> svn.

2007-09-06  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/rs.rb: (Gluon::RequestResponseContext class) switch to
	another page.

2007-09-05  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: abort on action-call by reserved word.

2007-09-02  TOKI Yoshinori  <toki@freedom.ne.jp>

	* run/server/mongrel: mongrel.

2007-07-31  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: (Gluon::Action class) strict call check for
	action method.

2007-06-30  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/dispatcher.rb: (Gluon::Dispatcher class) change
	location path of root.

2007-06-23  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) path_info
	option of mklink method.
